# neural-debugger-replication

./: .gitignore  journal.md  pyproject.toml
.github/workflows/: ci.yml
results/: smoke_model_cruxeval.json
scripts/: eval_cruxeval.py  generate_data.py  train.py
src/data/: generate.py  trajectory_sampler.py
src/debugger/: actions.py
src/eval/: cruxeval.py  metrics.py
src/model/: tokenizer.py  train.py
src/trace/: collector.py  serializer.py  state_tree.py
tests/: test_actions.py  test_collector.py  test_cruxeval_format.py  test_serializer.py  test_state_tree.py
